<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/fragment_dialog_progress_download_indeterminate"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/one"
            android:onClick="onClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/fragment_dialog_progress_download_determinate"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/two"
            android:onClick="onClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/notification_bar_progress_download_indeterminate"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/three"
            android:onClick="onClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:text="@string/notification_bar_progress_download_determinate"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/four"
            android:onClick="onClick"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
